--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.datasource.url= jdbc:mysql://localhost:3306/backendfinal?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= Viernes20+
 
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto= update
-
+#spring.jpa.hibernate.ddl-auto= update
 # App Properties
 jwt.jwtSecret= SebasSecretKey
-jwt.jwtExpirationMs= 300000
+jwt.jwtExpirationMs= 90000000
