--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.jpa.hibernate.ddl-auto= update
 # App Properties
 jwt.jwtSecret= SebasSecretKey
 jwt.jwtExpirationMs= 90000000
+
+#max file size for each request.
+spring.servlet.multipart.max-file-size=2MB
+#max request size for a multipart/form-data.
+spring.servlet.multipart.max-request-size=2MB
